--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,19 @@
-worker_processes 1;
+worker_processes auto;
 worker_rlimit_nofile 100000;
 
 events {
-    worker_connections 1024;
+    worker_connections 8192;
+    use epoll;
+    multi_accept on;
 }
 
 http {
-    # Define the log format
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" '
-                      'Backend: $upstream_addr';  # This will log the backend server address
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for" '
+                    'Backend: $upstream_addr';
 
-    access_log /var/log/nginx/access.log main;  # Use the new log format
+    access_log /var/log/nginx/access.log main;
 
     sendfile on;
     tcp_nopush on;
@@ -21,21 +22,31 @@ http {
     types_hash_max_size 2048;
     server_tokens off;
 
-    # Define the upstream block for load balancing
-  upstream backend_servers {
-    server host.docker.internal:5000;  # This resolves to your host machine
-    server host.docker.internal:5001;
-    server host.docker.internal:5002;
-    server host.docker.internal:5003;
-}
+    # === Upstreams ===
+    upstream api_backend {
+        server host.docker.internal:5000;
+        server host.docker.internal:5001;
+        server host.docker.internal:5002;
+        server host.docker.internal:5003;
+    }
 
+    upstream products_backend {
+        server host.docker.internal:5000;
+        server host.docker.internal:5001;
+        server host.docker.internal:5002;
+    }
+
+    upstream stats_backend {
+        server host.docker.internal:5002;
+        server host.docker.internal:5003;
+    }
 
     server {
         listen 80;
 
-        # Proxy requests to the backend servers
+        # === /api/ ===
         location /api/ {
-            proxy_pass http://backend_servers;
+            proxy_pass http://api_backend;
             proxy_http_version 1.1;
             proxy_set_header Connection "keep-alive";
             proxy_set_header Host $host;
@@ -44,9 +55,32 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location = /404.html {
-            root /usr/share/nginx/html;
-            internal;
+        # === /products ===
+        location /products {
+            proxy_pass http://products_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "keep-alive";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # === /stats ===
+        location /stats {
+            proxy_pass http://stats_backend;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "keep-alive";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # === Fallback ===
+        location / {
+            return 404 'Only /api/, /products, and /stats routes are available.';
+            add_header Content-Type text/plain;
         }
 
         location /nginx_status {
@@ -55,9 +89,9 @@ http {
             allow all;
         }
 
-        location / {
+        location = /404.html {
             root /usr/share/nginx/html;
-            index index.html index.htm;
+            internal;
         }
     }
 }
