--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,9 +18,10 @@
         "ioredis": "^5.6.1",
         "jsonwebtoken": "^9.0.2",
         "kafkajs": "^2.2.4",
-        "multer": "^1.4.5-lts.3",
+        "multer": "^1.4.5",
         "nodemailer": "^7.0.3",
         "prom-client": "^15.1.3",
+        "redis": "^5.1.1",
         "simple-update-notifier": "^2.0.0"
     },
     "devDependencies": {
