--- a/redis/config-node/node-4.conf
+++ b/redis/config-node/node-4.conf
@@ -1,5 +1,3 @@
-# redis-7004.conf
-
 port 7004
 cluster-enabled yes
 cluster-config-file nodes-7004.conf
@@ -8,12 +6,15 @@ cluster-node-timeout 5000
 appendonly yes
 appendfilename "appendonly-7004.aof"
 
-dir /data
+
 
 logfile "redis-7004.log"
 
-# Optional for security
 protected-mode no
 
-# Bind to all interfaces (for Docker)
 bind 0.0.0.0
+
+# Cluster announce settings - adjust cluster-announce-ip if needed (e.g., your Docker host IP)
+cluster-announce-ip 127.0.0.1
+cluster-announce-port 7004
+cluster-announce-bus-port 17004
