--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "faker": "^6.6.6",
+    "kafkajs": "^2.2.4",
+    "nodemailer": "^7.0.3",
     "prisma": "^6.7.0"
   }
 }
